

v0.15 (β) - 2016-xx-xx
======================
- Django 1.8.11 released (#82).
- 



v0.14 (β) - 2016-03-13
======================
- Show exceptions in production (webinterface) (#87).
- Keep Supervisor processes running (#79).
- Hourly stats of 22:00:00+00 every day lack gas (#78).
- Test Travis-CI with MySQL + MariaDB + PostgreSQL (#54).
- PostgreSQL tests + nosetests + coverage failure: unrecognized configuration parameter "foreign_key_checks" (#62).
- Performance check (#83).
- Allow month & year archive (#66).
- Graphs keep increasing height on tablet (#89).



v0.13 (β) - 2016-03-06
======================
- Delete StatsSettings(.track) settings model (#71).
- Drop deprecated commands (#22).
- Datalogger doesn't work properly with DSMR 4.2 (KAIFA-METER) (#73).
- Dashboard month statistics costs does not add up (#75).
- Log unhandled exceptions and errors (#65).
- Datalogger crashes with IntegrityError because 'timestamp' is null (#74).
- Trends are always shown in UTC (#76).
- Squash migrations (#31).
- Display 'electricity returned' graph in dashboard (#81).
- Optional gas (and electricity returned) capabilities tracking (#70).
- Add 'electricity returned' to trends page (#84).



v0.12 (β) - 2016-03-01
======================
- Archive: View past days details (#61).
- Dashboard: Consumption total for current month (#60).
- Check whether gas readings are optional (#34).
- Django security releases issued: 1.8.10 (#68).
- Notes display in archive (#69).



v0.11 (β) - 2016-02-22
======================
- Status page/alerts when features are disabled/unavailable (#45).
- Integrate Travis CI (#48).
- Testing coverage (#38).
- Implement automatic backups & Dropbox cloud storage (#44).
- Link code coverage service to repository (#56).
- Explore timezone.localtime() as replacement for datetime.astimezone() (#50).
- Align GasConsumption.read_at to represent the start of hour (#40).



v0.10 (β) - 2016-02-15
======================
- Cleanup unused static files (#47).