@@ -37,8 +37,13 @@ class TestBackupServices(InterceptStdoutMixin, TestCase):
         self.assertTrue(create_backup_mock.called)
 
     @mock.patch('dsmr_backup.services.backup.create')
-    def test_check_interval_restriction(self, create_backup_mock):
+    @mock.patch('django.utils.timezone.now')
+    def test_check_interval_restriction(self, now_mock, create_backup_mock):
         """ Test whether backups are restricted by one backup per day. """
+        now_mock.return_value = timezone.make_aware(
+            timezone.datetime(2016, 1, 1, hour=1, minute=5)
+        )
+
         # Fake latest backup.
         now = timezone.localtime(timezone.now())
         backup_settings = BackupSettings.get_solo()
@@ -61,8 +66,13 @@ class TestBackupServices(InterceptStdoutMixin, TestCase):
         self.assertTrue(create_backup_mock.called)
 
     @mock.patch('dsmr_backup.services.backup.create')
-    def test_check_backup_time_restriction(self, create_backup_mock):
+    @mock.patch('django.utils.timezone.now')
+    def test_check_backup_time_restriction(self, now_mock, create_backup_mock):
         """ Test whether backups are restricted by user's backup time preference. """
+        now_mock.return_value = timezone.make_aware(
+            timezone.datetime(2016, 1, 1, hour=1, minute=5)
+        )
+
         now = timezone.localtime(timezone.now())
         backup_settings = BackupSettings.get_solo()
         backup_settings.latest_backup = now - timezone.timedelta(days=1)
@@ -150,7 +160,12 @@ class TestDropboxServices(InterceptStdoutMixin, TestCase):
         self.assertFalse(upload_chunked_mock.called)
 
     @mock.patch('dsmr_backup.services.dropbox.upload_chunked')
-    def test_sync(self, upload_chunked_mock):
+    @mock.patch('django.utils.timezone.now')
+    def test_sync(self, now_mock, upload_chunked_mock):
+        now_mock.return_value = timezone.make_aware(
+            timezone.datetime(2016, 1, 1)
+        )
+
         old_latest_sync = timezone.now() - timezone.timedelta(weeks=1)
         dropbox_settings = DropboxSettings.get_solo()
         dropbox_settings.latest_sync = old_latest_sync
@@ -164,8 +179,13 @@ class TestDropboxServices(InterceptStdoutMixin, TestCase):
         self.assertNotEqual(DropboxSettings.get_solo().latest_sync, old_latest_sync)
 
     @mock.patch('dsmr_backup.services.backup.get_backup_directory')
-    def test_sync_latest_sync(self, get_backup_directory_mock):
+    @mock.patch('django.utils.timezone.now')
+    def test_sync_latest_sync(self, now_mock, get_backup_directory_mock):
         """ Test whether syncs are limited to intervals. """
+        now_mock.return_value = timezone.make_aware(
+            timezone.datetime(2016, 1, 1)
+        )
+
         dropbox_settings = DropboxSettings.get_solo()
         dropbox_settings.latest_sync = timezone.now() + timezone.timedelta(minutes=1)
         dropbox_settings.save()
@@ -177,8 +197,13 @@ class TestDropboxServices(InterceptStdoutMixin, TestCase):
 
     @mock.patch('dsmr_backup.services.backup.get_backup_directory')
     @mock.patch('dsmr_backup.services.dropbox.upload_chunked')
-    def test_sync_last_modified(self, upload_chunked_mock, get_backup_directory_mock):
+    @mock.patch('django.utils.timezone.now')
+    def test_sync_last_modified(self, now_mock, upload_chunked_mock, get_backup_directory_mock):
         """ Test whether syncs are skipped when file was not modified. """
+        now_mock.return_value = timezone.make_aware(
+            timezone.datetime(2016, 1, 1)
+        )
+
         dropbox_settings = DropboxSettings.get_solo()
         dropbox_settings.latest_sync = timezone.now() - timezone.timedelta(weeks=1)
         dropbox_settings.save()
